<resources>
    <string name="app_name">Yevhen Media Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="radio">Radio</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="more">More</string>
    <string name="rate">Rate</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer </string>
    <string name="equalizer">Equalizer</string>
    <string name="drive_mode">Car Mode</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="ringtone">Ringtone</string>
    <string name="delete_from_devise">Delete from devise</string>
    <string name="edit_name">Edit name</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="favorite">Favorite</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="album">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artist">Artist</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="track">Track</string>
</resources>