<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:title="@string/track"
       android:id="@+id/navigation_track"
       android:icon="@drawable/ic_play_circle"
       />
    <item
        android:id="@+id/navigation_playlist"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlists" />

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_album"
        android:title="@string/album" />
    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/ic_recent_actors"
        android:title="@string/artist" />

    <item
        android:id="@+id/navigation_bookMarks"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/bookmarks" />
</menu>